# ruvector

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/intelligence/data/: feedback.json  patterns.json  sequences.json  trajectories.json
.github/workflows/: build-attention.yml  build-rvf-node.yml  postgres-extension-ci.yml  ruvector-postgres-ci.yml
crates/cognitum-gate-kernel/src/: lib.rs
crates/ruvector-attention-node/: package.json
crates/ruvector-attention-unified-wasm/: Cargo.toml
crates/ruvector-attention-unified-wasm/pkg/: README.md
crates/ruvector-attention-unified-wasm/src/: dag.rs  graph.rs  lib.rs  mamba.rs
crates/ruvector-attn-mincut/src/: gating.rs
crates/ruvector-cli/src/: main.rs
crates/ruvector-core/src/: agenticdb.rs  arena.rs  lib.rs  quantization.rs  vector_db.rs
crates/ruvector-dag/: Cargo.toml
crates/ruvector-dag/src/: lib.rs
crates/ruvector-economy-wasm/src/: curve.rs  (+4 more)
crates/ruvector-gnn-node/: package.json
crates/ruvector-mincut/: Cargo.toml  README.md
crates/ruvector-node/: package.json
crates/ruvector-postgres/: Cargo.toml  Dockerfile
crates/rvf/: README.md
docs/: README.md
docs/adr/: ADR-032-rvf-wasm-integration.md  ADR-037-publishable-rvf-acceptance-test.md  ADR-042-Security-RVF-AIDefence-TEE.md
docs/hooks/: CLI_REFERENCE.md  README.md
examples/benchmarks/: Cargo.toml
examples/dna/: Cargo.toml
examples/dna/benches/: dna_bench.rs
examples/dna/src/: alignment.rs  epigenomics.rs  error.rs  kmer.rs  lib.rs  main.rs  pharma.rs  pipeline.rs  protein.rs  real_data.rs  rvdna.rs  types.rs
examples/dna/tests/: kmer_tests.rs  pipeline_tests.rs  security_tests.rs
examples/edge-net/: Cargo.toml  README.md
examples/exo-ai-2025/: README.md
examples/onnx-embeddings-wasm/: Cargo.toml  README.md
examples/rvf/: Cargo.toml
npm/: package-lock.json
npm/core/: package.json
(+174 files in other folders)
